ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flower-ingress
  namespace: gke-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: workerstest.weareinto.ai
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: into-guesty-api-staging-service
            port:
              number: 80
